# rix

./: .gitignore  Cargo.toml  README.md  install.sh  update.sh
.github/workflows/: release.yml
rix-cli/: Cargo.toml
rix-cli/src/: args.rs  commands.rs  config.rs  handlers.rs  main.rs  ui.rs
rix-cli/src/commands/: environment.rs  mod.rs  package.rs  profile.rs
rix-cli/src/commands/environment/: init.rs  maintenance.rs  mod.rs  query.rs  sync.rs
rix-core/: Cargo.toml
rix-core/src/: compiler.rs  context.rs  discovery.rs  errors.rs  git.rs  hardware.rs  lib.rs  ops.rs  parser.rs  system.rs  verify.rs  writer.rs
rix-core/src/ops/: flake.rs  list.rs  mod.rs  refresh.rs
rix-core/src/system/: exec.rs  mod.rs  platform.rs  sync.rs
rix-core/src/verify/: mod.rs  registry.rs  sanity.rs  syntax.rs
rix-core/tests/: core_integration_tests.rs
