[package]
name = "rix-core"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = { version = "0.21.0", features = ["ssh", "https"] }
indicatif = "0.18.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rnix = "0.11"
rowan = "0.15"
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.10.0"
